src/main/java/io/github/mhamooei/antlrparser/InjectionParser.java
// Generated from /home/mhit/IdeaProjects/MlSqliTester/src/main/resources/Injection.g4 by ANTLR 4.7.2
package io.github.mhamooei.antlrparser;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class InjectionParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43;
	public static final int
		RULE_start = 0, RULE_dQuoteContext = 1, RULE_sQuoteContext = 2, RULE_numericContext = 3, 
		RULE_sqliAttack = 4, RULE_piggyAttack = 5, RULE_unionAttack = 6, RULE_union = 7, 
		RULE_unionPostfix = 8, RULE_cols = 9, RULE_distinct = 10, RULE_all = 11, 
		RULE_t1 = 12, RULE_t2 = 13, RULE_t3 = 14, RULE_t4 = 15, RULE_t5 = 16, 
		RULE_booleanAttack = 17, RULE_andAttack = 18, RULE_orAttack = 19, RULE_booleanFalseExpr = 20, 
		RULE_unaryFalse = 21, RULE_falseAtom = 22, RULE_falseConst = 23, RULE_booleanTrueExpr = 24, 
		RULE_binaryTrue = 25, RULE_unaryTrue = 26, RULE_trueAtom = 27, RULE_trueConst = 28, 
		RULE_wsp = 29, RULE_cmt = 30, RULE_hashtag = 31, RULE_doubleDash = 32, 
		RULE_funcSleep = 33, RULE_sleep = 34, RULE_blank = 35, RULE_inlineCmt = 36, 
		RULE_parOpen = 37, RULE_par = 38, RULE_terOne = 39, RULE_terSQuote = 40, 
		RULE_terDQuote = 41, RULE_terDigitZero = 42, RULE_terDigitOne = 43, RULE_terDigitExcludingZero = 44, 
		RULE_terDigitIncludingZero = 45, RULE_terChar = 46, RULE_opNot = 47, RULE_opBinInvert = 48, 
		RULE_opEqual = 49, RULE_opLt = 50, RULE_opGt = 51, RULE_opLike = 52, RULE_opIs = 53, 
		RULE_opMinus = 54, RULE_opOr = 55, RULE_opAnd = 56, RULE_opSel = 57, RULE_opUni = 58, 
		RULE_opSem = 59;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "dQuoteContext", "sQuoteContext", "numericContext", "sqliAttack", 
			"piggyAttack", "unionAttack", "union", "unionPostfix", "cols", "distinct", 
			"all", "t1", "t2", "t3", "t4", "t5", "booleanAttack", "andAttack", "orAttack", 
			"booleanFalseExpr", "unaryFalse", "falseAtom", "falseConst", "booleanTrueExpr", 
			"binaryTrue", "unaryTrue", "trueAtom", "trueConst", "wsp", "cmt", "hashtag", 
			"doubleDash", "funcSleep", "sleep", "blank", "inlineCmt", "parOpen", 
			"par", "terOne", "terSQuote", "terDQuote", "terDigitZero", "terDigitOne", 
			"terDigitExcludingZero", "terDigitIncludingZero", "terChar", "opNot", 
			"opBinInvert", "opEqual", "opLt", "opGt", "opLike", "opIs", "opMinus", 
			"opOr", "opAnd", "opSel", "opUni", "opSem"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'distinct'", "'all'", "'/*!'", "'*/'", "'50000'", "'false'", "'true'", 
			"'#'", "'--'", "'sleep'", "' '", "'/**/'", "'('", "')'", "'1'", "'''", 
			"'\"'", "'0'", "'2'", "'3'", "'4'", "'5'", "'6'", "'7'", "'8'", "'9'", 
			"'a'", "'!'", "'not'", "'~'", "'='", "'<'", "'>'", "'like'", "'is'", 
			"'-'", "'or'", "'||'", "'and'", "'&&'", "'select'", "'union'", "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Injection.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public InjectionParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public NumericContextContext numericContext() {
			return getRuleContext(NumericContextContext.class,0);
		}
		public SQuoteContextContext sQuoteContext() {
			return getRuleContext(SQuoteContextContext.class,0);
		}
		public DQuoteContextContext dQuoteContext() {
			return getRuleContext(DQuoteContextContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InjectionListener ) ((InjectionListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InjectionListener ) ((InjectionListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InjectionVisitor ) return ((InjectionVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			setState(123);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__17:
				enterOuterAlt(_localctx, 1);
				{
				setState(120);
				numericContext();
				}
				break;
			case T__15:
				enterOuterAlt(_localctx, 2);
				{
				setState(121);
				sQuoteContext();
				}
				break;
			case T__16:
				enterOuterAlt(_localctx, 3);
				{
				setState(122);
				dQuoteContext();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DQuoteContextContext extends ParserRuleContext {
		public List<TerDQuoteContext> terDQuote() {
			return getRuleContexts(TerDQuoteContext.class);
		}
		public TerDQuoteContext terDQuote(int i) {
			return getRuleContext(TerDQuoteContext.class,i);
		}
		public List<WspContext> wsp() {
			return getRuleContexts(WspContext.class);
		}
		public WspContext wsp(int i) {
			return getRuleContext(WspContext.class,i);
		}
		public BooleanAttackContext booleanAttack() {
			return getRuleContext(BooleanAttackContext.class,0);
		}
		public OpOrContext opOr() {
			return getRuleContext(OpOrContext.class,0);
		}
		public ParContext par() {
			return getRuleContext(ParContext.class,0);
		}
		public ParOpenContext parOpen() {
			return getRuleContext(ParOpenContext.class,0);
		}
		public SqliAttackContext sqliAttack() {
			return getRuleContext(SqliAttackContext.class,0);
		}
		public CmtContext cmt() {
			return getRuleContext(CmtContext.class,0);
		}
		public DQuoteContextContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dQuoteContext; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InjectionListener ) ((InjectionListener)listener).enterDQuoteContext(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InjectionListener ) ((InjectionListener)listener).exitDQuoteContext(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InjectionVisitor ) return ((InjectionVisitor<? extends T>)visitor).visitDQuoteContext(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DQuoteContextContext dQuoteContext() throws RecognitionException {
		DQuoteContextContext _localctx = new DQuoteContextContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_dQuoteContext);
		try {
			setState(152);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(125);
				terDQuote();
				setState(126);
				wsp();
				setState(127);
				booleanAttack();
				setState(128);
				wsp();
				setState(129);
				opOr();
				setState(130);
				terDQuote();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(132);
				terDQuote();
				setState(133);
				par();
				setState(134);
				wsp();
				setState(135);
				booleanAttack();
				setState(136);
				wsp();
				setState(137);
				opOr();
				setState(138);
				parOpen();
				setState(139);
				terDQuote();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(141);
				terDQuote();
				setState(142);
				wsp();
				setState(143);
				sqliAttack();
				setState(144);
				cmt();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(146);
				terDQuote();
				setState(147);
				par();
				setState(148);
				wsp();
				setState(149);
				sqliAttack();
				setState(150);
				cmt();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SQuoteContextContext extends ParserRuleContext {
		public List<TerSQuoteContext> terSQuote() {
			return getRuleContexts(TerSQuoteContext.class);
		}
		public TerSQuoteContext terSQuote(int i) {
			return getRuleContext(TerSQuoteContext.class,i);
		}
		public List<WspContext> wsp() {
			return getRuleContexts(WspContext.class);
		}
		public WspContext wsp(int i) {
			return getRuleContext(WspContext.class,i);
		}
		public BooleanAttackContext booleanAttack() {
			return getRuleContext(BooleanAttackContext.class,0);
		}
		public OpOrContext opOr() {
			return getRuleContext(OpOrContext.class,0);
		}
		public ParContext par() {
			return getRuleContext(ParContext.class,0);
		}
		public ParOpenContext parOpen() {
			return getRuleContext(ParOpenContext.class,0);
		}
		public SqliAttackContext sqliAttack() {
			return getRuleContext(SqliAttackContext.class,0);
		}
		public CmtContext cmt() {
			return getRuleContext(CmtContext.class,0);
		}
		public SQuoteContextContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sQuoteContext; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InjectionListener ) ((InjectionListener)listener).enterSQuoteContext(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InjectionListener ) ((InjectionListener)listener).exitSQuoteContext(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InjectionVisitor ) return ((InjectionVisitor<? extends T>)visitor).visitSQuoteContext(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SQuoteContextContext sQuoteContext() throws RecognitionException {
		SQuoteContextContext _localctx = new SQuoteContextContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_sQuoteContext);
		try {
			setState(181);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(154);
				terSQuote();
				setState(155);
				wsp();
				setState(156);
				booleanAttack();
				setState(157);
				wsp();
				setState(158);
				opOr();
				setState(159);
				terSQuote();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(161);
				terSQuote();
				setState(162);
				par();
				setState(163);
				wsp();
				setState(164);
				booleanAttack();
				setState(165);
				wsp();
				setState(166);
				opOr();
				setState(167);
				parOpen();
				setState(168);
				terSQuote();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(170);
				terSQuote();
				setState(171);
				wsp();
				setState(172);
				sqliAttack();
				setState(173);
				cmt();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(175);
				terSQuote();
				setState(176);
				par();
				setState(177);
				wsp();
				setState(178);
				sqliAttack();
				setState(179);
				cmt();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumericContextContext extends ParserRuleContext {
		public List<TerDigitZeroContext> terDigitZero() {
			return getRuleContexts(TerDigitZeroContext.class);
		}
		public TerDigitZeroContext terDigitZero(int i) {
			return getRuleContext(TerDigitZeroContext.class,i);
		}
		public List<WspContext> wsp() {
			return getRuleContexts(WspContext.class);
		}
		public WspContext wsp(int i) {
			return getRuleContext(WspContext.class,i);
		}
		public BooleanAttackContext booleanAttack() {
			return getRuleContext(BooleanAttackContext.class,0);
		}
		public ParContext par() {
			return getRuleContext(ParContext.class,0);
		}
		public OpOrContext opOr() {
			return getRuleContext(OpOrContext.class,0);
		}
		public ParOpenContext parOpen() {
			return getRuleContext(ParOpenContext.class,0);
		}
		public SqliAttackContext sqliAttack() {
			return getRuleContext(SqliAttackContext.class,0);
		}
		public CmtContext cmt() {
			return getRuleContext(CmtContext.class,0);
		}
		public NumericContextContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numericContext; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InjectionListener ) ((InjectionListener)listener).enterNumericContext(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InjectionListener ) ((InjectionListener)listener).exitNumericContext(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InjectionVisitor ) return ((InjectionVisitor<? extends T>)visitor).visitNumericContext(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NumericContextContext numericContext() throws RecognitionException {
		NumericContextContext _localctx = new NumericContextContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_numericContext);
		try {
			setState(208);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(183);
				terDigitZero();
				setState(184);
				wsp();
				setState(185);
				booleanAttack();
				setState(186);
				wsp();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(188);
				terDigitZero();
				setState(189);
				par();
				setState(190);
				wsp();
				setState(191);
				booleanAttack();
				setState(192);
				wsp();
				setState(193);
				opOr();
				setState(194);
				parOpen();
				setState(195);
				terDigitZero();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(197);
				terDigitZero();
				setState(198);
				wsp();
				setState(199);
				sqliAttack();
				setState(200);
				cmt();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(202);
				terDigitZero();
				setState(203);
				par();
				setState(204);
				wsp();
				setState(205);
				sqliAttack();
				setState(206);
				cmt();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SqliAttackContext extends ParserRuleContext {
		public UnionAttackContext unionAttack() {
			return getRuleContext(UnionAttackContext.class,0);
		}
		public PiggyAttackContext piggyAttack() {
			return getRuleContext(PiggyAttackContext.class,0);
		}
		public BooleanAttackContext booleanAttack() {
			return getRuleContext(BooleanAttackContext.class,0);
		}
		public SqliAttackContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sqliAttack; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InjectionListener ) ((InjectionListener)listener).enterSqliAttack(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InjectionListener ) ((InjectionListener)listener).exitSqliAttack(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InjectionVisitor ) return ((InjectionVisitor<? extends T>)visitor).visitSqliAttack(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SqliAttackContext sqliAttack() throws RecognitionException {
		SqliAttackContext _localctx = new SqliAttackContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_sqliAttack);
		try {
			setState(213);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__2:
			case T__41:
				enterOuterAlt(_localctx, 1);
				{
				setState(210);
				unionAttack();
				}
				break;
			case T__42:
				enterOuterAlt(_localctx, 2);
				{
				setState(211);
				piggyAttack();
				}
				break;
			case T__36:
			case T__37:
			case T__38:
			case T__39:
				enterOuterAlt(_localctx, 3);
				{
				setState(212);
				booleanAttack();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PiggyAttackContext extends ParserRuleContext {
		public OpSemContext opSem() {
			return getRuleContext(OpSemContext.class,0);
		}
		public OpSelContext opSel() {
			return getRuleContext(OpSelContext.class,0);
		}
		public WspContext wsp() {
			return getRuleContext(WspContext.class,0);
		}
		public FuncSleepContext funcSleep() {
			return getRuleContext(FuncSleepContext.class,0);
		}
		public PiggyAttackContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_piggyAttack; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InjectionListener ) ((InjectionListener)listener).enterPiggyAttack(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InjectionListener ) ((InjectionListener)listener).exitPiggyAttack(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InjectionVisitor ) return ((InjectionVisitor<? extends T>)visitor).visitPiggyAttack(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PiggyAttackContext piggyAttack() throws RecognitionException {
		PiggyAttackContext _localctx = new PiggyAttackContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_piggyAttack);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(215);
			opSem();
			setState(216);
			opSel();
			setState(217);
			wsp();
			setState(218);
			funcSleep();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UnionAttackContext extends ParserRuleContext {
		public UnionContext union() {
			return getRuleContext(UnionContext.class,0);
		}
		public List<WspContext> wsp() {
			return getRuleContexts(WspContext.class);
		}
		public WspContext wsp(int i) {
			return getRuleContext(WspContext.class,i);
		}
		public OpSelContext opSel() {
			return getRuleContext(OpSelContext.class,0);
		}
		public ColsContext cols() {
			return getRuleContext(ColsContext.class,0);
		}
		public UnionPostfixContext unionPostfix() {
			return getRuleContext(UnionPostfixContext.class,0);
		}
		public ParOpenContext parOpen() {
			return getRuleContext(ParOpenContext.class,0);
		}
		public ParContext par() {
			return getRuleContext(ParContext.class,0);
		}
		public UnionAttackContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unionAttack; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InjectionListener ) ((InjectionListener)listener).enterUnionAttack(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InjectionListener ) ((InjectionListener)listener).exitUnionAttack(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InjectionVisitor ) return ((InjectionVisitor<? extends T>)visitor).visitUnionAttack(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UnionAttackContext unionAttack() throws RecognitionException {
		UnionAttackContext _localctx = new UnionAttackContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_unionAttack);
		try {
			setState(250);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(220);
				union();
				setState(221);
				wsp();
				setState(222);
				opSel();
				setState(223);
				wsp();
				setState(224);
				cols();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(226);
				union();
				setState(227);
				wsp();
				setState(228);
				unionPostfix();
				setState(229);
				opSel();
				setState(230);
				wsp();
				setState(231);
				cols();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(233);
				union();
				setState(234);
				wsp();
				setState(235);
				parOpen();
				setState(236);
				opSel();
				setState(237);
				wsp();
				setState(238);
				cols();
				setState(239);
				par();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(241);
				union();
				setState(242);
				wsp();
				setState(243);
				unionPostfix();
				setState(244);
				parOpen();
				setState(245);
				opSel();
				setState(246);
				wsp();
				setState(247);
				cols();
				setState(248);
				par();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UnionContext extends ParserRuleContext {
		public OpUniContext opUni() {
			return getRuleContext(OpUniContext.class,0);
		}
		public T1Context t1() {
			return getRuleContext(T1Context.class,0);
		}
		public T2Context t2() {
			return getRuleContext(T2Context.class,0);
		}
		public T3Context t3() {
			return getRuleContext(T3Context.class,0);
		}
		public T4Context t4() {
			return getRuleContext(T4Context.class,0);
		}
		public T5Context t5() {
			return getRuleContext(T5Context.class,0);
		}
		public UnionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_union; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InjectionListener ) ((InjectionListener)listener).enterUnion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InjectionListener ) ((InjectionListener)listener).exitUnion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InjectionVisitor ) return ((InjectionVisitor<? extends T>)visitor).visitUnion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UnionContext union() throws RecognitionException {
		UnionContext _localctx = new UnionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_union);
		try {
			setState(262);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(252);
				opUni();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(253);
				t1();
				setState(254);
				opUni();
				setState(255);
				t2();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(257);
				t3();
				setState(258);
				t4();
				setState(259);
				opUni();
				setState(260);
				t5();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UnionPostfixContext extends ParserRuleContext {
		public AllContext all() {
			return getRuleContext(AllContext.class,0);
		}
		public WspContext wsp() {
			return getRuleContext(WspContext.class,0);
		}
		public DistinctContext distinct() {
			return getRuleContext(DistinctContext.class,0);
		}
		public UnionPostfixContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unionPostfix; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InjectionListener ) ((InjectionListener)listener).enterUnionPostfix(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InjectionListener ) ((InjectionListener)listener).exitUnionPostfix(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InjectionVisitor ) return ((InjectionVisitor<? extends T>)visitor).visitUnionPostfix(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UnionPostfixContext unionPostfix() throws RecognitionException {
		UnionPostfixContext _localctx = new UnionPostfixContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_unionPostfix);
		try {
			setState(270);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
				enterOuterAlt(_localctx, 1);
				{
				setState(264);
				all();
				setState(265);
				wsp();
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 2);
				{
				setState(267);
				distinct();
				setState(268);
				wsp();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ColsContext extends ParserRuleContext {
		public TerDigitZeroContext terDigitZero() {
			return getRuleContext(TerDigitZeroContext.class,0);
		}
		public ColsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cols; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InjectionListener ) ((InjectionListener)listener).enterCols(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InjectionListener ) ((InjectionListener)listener).exitCols(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InjectionVisitor ) return ((InjectionVisitor<? extends T>)visitor).visitCols(this);
			else return visitor.visitChildren(this);
		}
	}
